update folder structure

--- a/assets/styles/core.css
+++ b/assets/styles/core.css
@@ -3123,8 +3123,8 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #1b00ff;
-  background-color: #1b00ff; }
+  border-color: #5f5f5f;
+  background-color: #5f5f5f; }
 
 .custom-control-input:focus ~ .custom-control-label::before {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
