--- a/assets/styles/mycss.css
+++ b/assets/styles/mycss.css
@@ -47,6 +47,7 @@
   font-weight: 400;
 }
 
+.ui-reset-setting-btn,
 .card .card-body .read-more-btn {
   border-radius: 2px !important;
   margin-bottom: 16px !important;
@@ -69,6 +70,7 @@
   line-height: 1.5;
 }
 
+.ui-reset-setting-btn:hover,
 .card .card-body .read-more-btn:hover {
   color: #5f5f5f;
   background-color: #ffffff;
