--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -94,7 +94,6 @@ h6 {
 	padding: 0;
 	font-weight: 600;
 	color: #424242;
-	font-family: 'Righteous', cursive;
 }
 
 ol,
@@ -1082,7 +1081,7 @@ textarea.form-control {
 	top: 2px;
 	left: -30px;
 	background-color: transparent;
-	border: 2px solid #1b00ff
+	border: 2px solid #5f5f5f
 }
 
 .custom-control-label::after {
@@ -1110,7 +1109,7 @@ textarea.form-control {
 }
 
 .custom-radio .custom-control-input:checked~.custom-control-label::before {
-	background-color: #1b00ff
+	background-color: #5f5f5f
 }
 
 .custom-checkbox .custom-control-input:disabled:checked~.custom-control-label::before {
@@ -2065,9 +2064,9 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
 .sidebar-menu .submenu li a {
 	display: block;
 	padding: 5px 15px 5px 60px;
-	font-size: 14px;
-	color: #fff;
-	font-weight: 300;
+	font-size: 15px;
+	color: rgb(0, 0, 0);
+	font-weight: 400;
 	letter-spacing: .03em;
 	position: relative;
 	font-family: 'Inter', sans-serif
@@ -2136,7 +2135,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
 
 .sidebar-light .sidebar-menu .dropdown-toggle,
 .sidebar-light .sidebar-menu .submenu li a {
-	color: #0b132b;
+	color: #000000;
 }
 
 .sidebar-light .sidebar-menu .dropdown-toggle .micon {
@@ -2616,7 +2615,7 @@ body.IE .register-page-wrap .container {
 	display: none;
 	text-align: center
 }
-
+/* 
 .error-page h1,
 .error-page-wrap {
 	font-size: 16px;
@@ -2644,7 +2643,7 @@ body.IE .register-page-wrap .container {
 }
 .error-page .btn{
 	color: #ffffff;
-}
+} */
 
 .project-info {
 	padding-bottom: 15px
@@ -4502,7 +4501,7 @@ body.IE .register-page-wrap .container {
 }
 
 .right-sidebar .sidebar-title h3 {
-	font-weight: 600
+	font-weight: 400
 }
 
 .right-sidebar .sidebar-title h3 span {
